--- a/views/account_analytic_default_view.xml
+++ b/views/account_analytic_default_view.xml
@@ -59,13 +59,11 @@
                             <div t-attf-class="oe_kanban_card oe_kanban_global_click">
                                 <div>
                                     <strong><span><field name="analytic_id"/></span></strong>
+                                    <img t-att-src="kanban_image('res.users', 'image_128', record.user_id.raw_value)" t-att-title="record.user_id.value" t-att-alt="record.user_id.value" class="oe_kanban_avatar o_image_24_cover float-right"/>
                                 </div>
                                 <div t-if="record.date_start.value"><i class="fa fa-calendar"></i> From <field name="date_start"/> <t t-if="record.date_stop.value">to <field name="date_stop"/></t></div>
                                 <div t-if="record.product_id.value"><strong>Product</strong> <field name="product_id"/> </div>
                                 <div t-if="record.partner_id.value"><strong>Customer</strong> <field name="partner_id"/> </div>
-                                <div class="float-right">
-                                    <field name="user_id" widget="many2one_avatar_user"/>
-                                </div>
                             </div>
                         </t>
                     </templates>
@@ -96,24 +94,29 @@
         </record>
 
         <record id="action_analytic_default_list" model="ir.actions.act_window">
-            <field name="name">Analytic Defaults Rules</field>
+            <field name="name">Analytic Defaults</field>
             <field name="res_model">account.analytic.default</field>
             <field name="view_mode">tree,kanban,form</field>
             <field name="search_view_id" ref="view_account_analytic_default_form_search"/>
             <field name="context">{"search_default_current":1}</field>
         </record>
 
+        <record id="action_product_default_list" model="ir.actions.act_window">
+            <field name="name">Analytic Rules</field>
+            <field name="res_model">account.analytic.default</field>
+            <field name="context">{'search_default_product_id': [active_id], 'default_product_id': active_id}</field>
+        </record>
 
         <menuitem id="menu_analytic_default_list"
             action="action_analytic_default_list"
             parent="account.menu_analytic_accounting"/>
 
-        <record id="analytic_rule_action_user" model="ir.actions.act_window">
-            <field name="name">Analytic Rules</field>
-            <field name="res_model">account.analytic.default</field>
-            <field name="context">{'search_default_user_id': [active_id], 'default_user_id': active_id}</field>
-            <field name="binding_model_id" ref="base.model_res_users"/>
-            <field name="binding_view_types">form</field>
-            <field name="groups_id" eval="[(4, ref('analytic.group_analytic_accounting'))]"/>
-        </record>
+        <act_window
+            name="Analytic Rules"
+            id="analytic_rule_action_user"
+            res_model="account.analytic.default"
+            binding_model="res.users"
+            binding_views="form"
+            context="{'search_default_user_id': [active_id], 'default_user_id': active_id}"
+            groups="analytic.group_analytic_accounting"/>
 </odoo>
